Inline icon overlaps field value for comboBox, entityPicker (fix) jmix-framework/jmix#984

--- a/jmix-ui/ui-themes/src/main/resources/halo/components/tagfield/tagfield.scss
+++ b/jmix-ui/ui-themes/src/main/resources/halo/components/tagfield/tagfield.scss
@@ -86,6 +86,10 @@ $jmix-tagfield-tag-border-radius: $jmix-taglabel-border-radius !default;
     }
   }
 
+  .#{$primary-stylename}.empty.inline-icon {
+    padding-left: $v-unit-size;
+  }
+
   .#{$primary-stylename}.clear-all:not(.empty) {
     position: relative;
 
